# python-homeworks

./: .gitignore  README.md
1/: 1.py  2.py  3.py  4.py  5.py  6.py
2/: 1.py  2.py  3.py  4.py  input.txt  unique_output.txt
3/: 1.py  2.py  3.py  4.py
4/: .coverage  README.md  pyproject.toml
4/app/: main.py
4/app/src/services/orders/: domain.py
4/app/src/services/products/: domain.py
4/app/src/services/store/: service.py
4/app/src/shared/logger/: logger.py
4/app/src/shared/metaclasses/: singleton.py
4/app/tests/: service_orders_test.py  service_products_test.py  service_store_test.py
4/src/: main.py
4/src/services/orders/: domain.py
4/src/services/products/: domain.py
4/src/services/store/: service.py
4/src/shared/logger/: logger.py
4/src/shared/metaclasses/: singleton.py
5/: 1.py
6/: 1.py  2.py  3.py  pyproject.toml
