[tool.poetry]
name = "python-homework-4"
version = "0.1.0"
description = "Shop model"
authors = ["edkirill <edkirill@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
ruff = "^0.7.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
